[gd_scene load_steps=24 format=3 uid="uid://cfgg3ow4u342j"]

[ext_resource type="Script" uid="uid://lkc6tv1nehn7" path="res://script/goblin.gd" id="1_7w5cp"]
[ext_resource type="Texture2D" uid="uid://c8vk3le5d03j0" path="res://assets/Dungeon/Goblin/Attack3.png" id="1_xcvi8"]
[ext_resource type="Texture2D" uid="uid://c0fuunjitvpr" path="res://assets/Dungeon/Goblin/Idle.png" id="1_xm08b"]
[ext_resource type="PackedScene" uid="uid://cnpgwerhbda5o" path="res://Scenes/bom.tscn" id="2_6n10i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fkbyy"]
atlas = ExtResource("1_xcvi8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gt0r"]
atlas = ExtResource("1_xcvi8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6mmh"]
atlas = ExtResource("1_xcvi8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep384"]
atlas = ExtResource("1_xcvi8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajbjq"]
atlas = ExtResource("1_xcvi8")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p60ou"]
atlas = ExtResource("1_xcvi8")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpiyv"]
atlas = ExtResource("1_xcvi8")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m25tm"]
atlas = ExtResource("1_xcvi8")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfpgn"]
atlas = ExtResource("1_xcvi8")
region = Rect2(1200, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_deoj1"]
atlas = ExtResource("1_xcvi8")
region = Rect2(1350, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_su1ic"]
atlas = ExtResource("1_xcvi8")
region = Rect2(1500, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbm5p"]
atlas = ExtResource("1_xcvi8")
region = Rect2(1650, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcvi8"]
atlas = ExtResource("1_xm08b")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w5cp"]
atlas = ExtResource("1_xm08b")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n10i"]
atlas = ExtResource("1_xm08b")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbw3e"]
atlas = ExtResource("1_xm08b")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_fkbyy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkbyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gt0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6mmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep384")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajbjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p60ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpiyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m25tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfpgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deoj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su1ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbm5p")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcvi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w5cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n10i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbw3e")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w5cp"]
size = Vector2(27, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6n10i"]
size = Vector2(561, 26)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_7w5cp")
bom_scene = ExtResource("2_6n10i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.9999995, 1.0000005)
scale = Vector2(0.77666664, 0.73333335)
sprite_frames = SubResource("SpriteFrames_fkbyy")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 7.5)
shape = SubResource("RectangleShape2D_7w5cp")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-1.5, 3)
shape = SubResource("RectangleShape2D_6n10i")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(17, 3)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
